@startuml class-auth
class User {
  -Long id
  -String email
  -String password
  -String fullName
  -UserRole role
  +onCreate()
  +onUpdate()
}

class AuthService {
  -UserRepository userRepo
  -JwtTokenProvider jwtProvider
  -PasswordEncoder encoder
  +register(RegisterRequest): AuthResponse
  +login(AuthRequest): AuthResponse
}

class JwtTokenProvider {
  -String secretKey
  -long expiration
  +generateToken(email): String
  +validateToken(token): boolean
  +getEmailFromToken(token): String
}

class CustomUserDetailsService {
  -UserRepository userRepo
  +loadUserByUsername(email): UserDetails
}

AuthService --> User
AuthService --> JwtTokenProvider
CustomUserDetailsService --> User
@enduml
